@@ -1808,11 +1808,14 @@ void create_fl_digi_main() {
 			ReceiveText->setFontColor(progdefaults.CTRLcolor, FTextBase::CTRL);
 			ReceiveText->setFontColor(progdefaults.SKIPcolor, FTextBase::SKIP);
 			ReceiveText->setFontColor(progdefaults.ALTRcolor, FTextBase::ALTR);
-			string Macroset = "<<<===== Macro File ";
-			Macroset.append(progStatus.LastMacroFile);
-			Macroset.append(" Loaded =====>>>\n\n");
-			ReceiveText->add(Macroset.c_str());
-	
+			
+			if (progdefaults.DisplayMacroFilename) {
+				string Macroset = "<<<===== Macro File ";
+				Macroset.append(progStatus.LastMacroFile);
+				Macroset.append(" Loaded =====>>>\n\n");
+				ReceiveText->add(Macroset.c_str());
+			}
+			
 			TiledGroup->add_resize_check(FTextView::wheight_mult_tsize, ReceiveText);
 			FHdisp = new Raster(sw, Y, WNOM-sw, minRxHeight);
 			FHdisp->hide();
